fix: fixed profile overflow, like button re-made with bg-img

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -3,6 +3,9 @@
   margin: 0 20px 0 0;
   transition: opacity 0.3s ease;
   background: transparent;
+  background-image: url(../../../images/heart.svg);
+  width: 22px;
+  aspect-ratio: 22/19;
   border: none;
   cursor: pointer;
   padding: 0;
